WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286501
Safari: Subtitles are not displayed in PIP mode
https://bugs.webkit.org/show_bug.cgi?id=286501
Summary
Safari: Subtitles are not displayed in PIP mode
Dana Estra
Reported
2025-01-24 13:27:23 PST
Safari: Subtitles are not displayed in PIP mode
Attachments
Add attachment
proposed patch, testcase, etc.
Dana Estra
Comment 1
2025-01-24 13:27:24 PST
<
rdar://problem/139626885
>
Dana Estra
Comment 2
2025-01-24 13:37:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39517
EWS
Comment 3
2025-01-29 09:30:57 PST
Committed
289503@main
(ac123bdd1261): <
https://commits.webkit.org/289503@main
> Reviewed commits have been landed. Closing PR #39517 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug